@@ -14,7 +14,7 @@
 <introduction>
 <p>We have seen in <acroref type="section" acro="SD" /> that under the right conditions a square matrix is similar to a diagonal matrix.  We recognize now, via <acroref type="theorem" acro="SCB" />, that a similarity transformation is a change of basis on a matrix representation.  So we can now discuss the choice of a basis used to build a matrix representation, and decide if some bases are better than others for this purpose.  This will be the tone of this section.  We will also see that every matrix has a reasonably useful matrix representation, and we will discover a new class of diagonalizable linear transformations.  First we need some basic facts about triangular matrices.</p>
 
-<p><b>Note:</b> This section is not as complete as the previous ones.  It would benefit from more examples, Sage explanations, and the inclusion of some reading questions and exercises.  Furthermore, it is possible that applications of results about orthogonality make use of previous versions based on an inner product that is the <q>reverse</q> of the current version.  That said, the definitions, theorems and proofs are accurate and complete.</p>
+<p><b>Note:</b> This section is not as complete as the previous ones.  It would benefit from more examples, Sage explanations, and the inclusion of some exercises.  Furthermore, it is possible that applications of results about orthogonality make use of previous versions based on an inner product that is the <q>reverse</q> of the current version.  That said, the definitions, theorems and proofs are accurate and complete.</p>
 
 </introduction>
 
@@ -485,7 +485,9 @@ which forces the conclusions
 <!--   End  OD.tex -->
 <readingquestions>
 <ol>
-<li>Reading questions needed here.  Soon.</li>
+<li>Name three broad classes of normal matrices that we have studied previously.  No set that you give should be a subset of another on your list.</li>
+<li>Compare and contrast <acroref type="theorem" acro="UTMR" /> with <acroref type="theorem" acro="OD" />.</li>
+<li>Given an $n\times n$ matrix $A$, why would you desire an orthonormal basis of $\complex{n}$ composed entirely of eigenvectors of $A$?</li>
 </ol>
 </readingquestions>
 
