@@ -7,6 +7,7 @@ New:  Exercise NM.T31 (with solution)
 New:  Exercises LT.T30 and LT.T31
 New:  Exercise LISS.T51, converse of Theorem VRRB
 New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
+New:  Reading Questions, Section OD
 Edit:  Explained  min(m,n)  in Exercise PD.T15
 Edit:  More on induction in Proof Technique I (Dan Messenger)
 Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
